--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,30 @@
-*~
-viso2_wrap.cpp
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
 *.so
-*.pyc
-src/build*
-src/dist*
-src/MANIFEST
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# autogeneraged by SWIG
+viso2_wrap.cpp
+viso2.py
